Added Note and Notes pages
- Added note.html in household_main
- Added notes.html in household_main
- Migrated database to reflect changes

--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -1,5 +1,6 @@
 <p>
-  <a href="{% url 'household_main:index' %}">Household</a>
+  <a href="{% url 'household_main:index' %}">Household</a> -
+  <a href="{% url 'household_main:notes' %}">Notes</a>
 </p>
 
 {% block content %}{% endblock content %}
