--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -1,5 +1,6 @@
-<p>Household</p>
+{% extends 'household_main/base.html' %}
 
-<p>Household is a python django web server application used 
-to track chore output and create data visualizations 
-for motivating laborers.</p>
+{% block content %}
+  <p>Learning Log helps you keep track of your learning, for any topic you're
+  interested in.</p>
+{% endblock content %}
