--- a/household_main/templates/household_main/note.html
+++ b/household_main/templates/household_main/note.html
@@ -5,14 +5,21 @@
   <p>Notes: {{ note.text }}</p>
 
   <p>Entries:</p>
+  <p>
+    <a href="{% url 'household_main:new_entry' note.id %}">Add new entry</a>
+  </p>
+
   <ul>
     {% for entry in entries %}
       <li>
         <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
+        <p>
+          <a href="{% url 'household_main:edit_entry' entry.id %}">
+            Edit entry</a></p>
       </li>
     {% empty %}
-      <li>There are no entries for this topic yet.</li>
+      <li>There are no entries yet.</li>
     {% endfor %}
   </ul>
   
