Added User Accounts
- Added Accounts application to django
- Updated household/settings.py to reflect accounts changes
- Added Log-in to household_main/base.html
- Added log-out form to
household_main/base.html
- Added register form to accounts\urls.py
- Created accounts/views.py and added registration page + redirect
- Created registrations\register.html
- Added Register link to base.html
- Added @login_required to household_main/views.py functions to restrict access to logged in users only
- Added owner field and foreign key pair to Note class in household_main/models.py
- Migrated db to reflect changes in models.py, gave all current notes to gladmin
- Updated household_main\views.py to
   - only show notes belonging to individual users and
   - 404 on unowned notes
   - Allow new notes to be added as a user
- Updated index.html to better description
To-do's for Users
- Refactor user checks into  check_topic_owner() function
- Institute a check for current user owns the entry’s note before saving

--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -1,6 +1,5 @@
 {% extends 'household_main/base.html' %}
 
 {% block content %}
-  <p>Learning Log helps you keep track of your learning, for any topic you're
-  interested in.</p>
+  <p>Automate your child-labor</p>
 {% endblock content %}
