--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -1,6 +1,20 @@
 <p>
   <a href="{% url 'household_main:index' %}">Household</a> -
-  <a href="{% url 'household_main:notes' %}">Notes</a>
+  <a href="{% url 'household_main:notes' %}">Notes</a> -
+  {% if user.is_authenticated %}
+    Hello, {{ user.username }}.
+  {% else %}
+    <a href="{% url 'accounts:register' %}">Register</a> -
+    <a href="{% url 'accounts:login' %}">Log in</a>
+  {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
+
+{% if user.is_authenticated %}
+  <hr />
+  <form action="{% url 'accounts:logout' %}" method='post'>
+    {% csrf_token %}
+    <button name='submit'>Log out</button>
+  </form>
+{% endif %}
