Bootstrap5 styling update
Added
- Bootstrap to settings.py
- Bootstrap styling to
   - index.html
   - base.html
   - login.html
   - note.html
   - notes.html

--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -1,5 +1,14 @@
 {% extends 'household_main/base.html' %}
 
-{% block content %}
-  <p>Automate your child-labor</p>
-{% endblock content %}
+{% block page_header %}
+  <div class="p-3 mb-4 bg-light border rounded-3">
+    <div class="container-fluid py-4">
+      <h1 class="display-3">Track household things</h1>
+      
+      <p class="lead">Automate your house labor</p>
+
+      <a class="btn btn-primary btn-lg mt-1"
+          href="{% url 'accounts:register' %}">Register &raquo;</a>
+    </div>
+  </div>
+{% endblock page_header %}
