--- a/chores/templates/chores/chores.html
+++ b/chores/templates/chores/chores.html
@@ -5,4 +5,18 @@
 {% endblock page_header %}
 
 {% block content %}
+
+  <ul class="list-group border-bottom pb-2 mb-4">
+    {% for chore in chores %}
+      <li class="list-group-item border-0">
+        <a href="{% url 'chores:chore' chore.id %}">
+          {{ chore.text }}</a>
+      </li>
+    {% empty %}
+      <li class="list-group-item border-0">No chores have been added yet.</li>
+    {% endfor %}
+  </ul>
+
+  <a href="{% url 'chores:new_chore' %}">Add a new chore</a>
+
 {% endblock content %}
