Chores application now does not care about User
- Also restricted adding chores to only admin
- Added price as a variable for the class Chores
- All users can always see all chores

Todo
 - Change entry for chore_entries from text field to timestamp
 - Create data logic around chore timestamps
 - Create leaderboard page
 - Create graphs pages
 - Restrict timestamp entries to be un-editable
 - Create prizes page
 - Create calendar pages for individual chores

--- a/chores/templates/chores/chores.html
+++ b/chores/templates/chores/chores.html
@@ -17,6 +17,6 @@
     {% endfor %}
   </ul>
 
-  <a href="{% url 'chores:new_chore' %}">Add a new chore</a>
+  <!-- <a href="{% url 'chores:new_chore' %}">Add a new chore</a> -->
 
 {% endblock content %}
