--- a/chores/templates/chores/chore.html
+++ b/chores/templates/chores/chore.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-  <p>
+  <!-- <p>
     <a href="{% url 'chores:new_chore_entry' chore.id %}">Add new entry</a>
-  </p>
+  </p> -->
 
   {% for chore_entry in chore_entries %}
     <div class="card mb-3">
@@ -22,7 +22,7 @@
       <div class="card-body">{{ chore_entry.text|linebreaks }}</div>
     </div>
   {% empty %}
-    <p>There are no entries for this chore yet.</p>
+    <p>You've never done this chore before. Ask a grown-up to teach you how to do it!</p>
   {% endfor %}
 
 {% endblock content %}
