User is able to log a chore by pressing button on chore page
- User can log chore timestamps to database now

Todo
 - Make user only able to log themselves instead of the current setup of being able to log any user
 - Chore page should only show chore entries for that specific chore
 - Chore page entries should have more detail

--- a/chores/templates/chores/edit_chore_entry.html
+++ b/chores/templates/chores/edit_chore_entry.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-  <p><a href="{% url 'household_main:chore' chore.id %}">{{ topic }}</a></p>
+  <p><a href="{% url 'chores:chore' chore.id %}">{{ chore }}</a></p>
 
   <p>Edit entry:</p>
 
-  <form action="{% url 'household_main:edit_chore_entry' chore_entry.id %}" method='post'>
+  <form action="{% url 'chores:edit_chore_entry' chore.id %}" method='post'>
     {% csrf_token %}
     {{ form.as_div }}
     <button name="submit">Save changes</button>
