Added 'wage' variable to Chore model
Also began work on home page.

Todo
 - Figure out best way to track wages earned by laborer. Possibly a new model/db table, or possibly logic when the chore entry is logged. Or a combination of the two.
 - Finish homepage and display aforementioned earned wages
 - Figure out how to dump earned totals on payouts

--- a/chores/templates/chores/chores.html
+++ b/chores/templates/chores/chores.html
@@ -11,6 +11,7 @@
       <li class="list-group-item border-0">
         <a href="{% url 'chores:chore' chore.id %}">
           {{ chore.text }}</a>
+          <div class="card-body">{{ chore.wage|linebreaks }}</div>
       </li>
     {% empty %}
       <li class="list-group-item border-0">No chores have been added yet.</li>
