--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -1,14 +1,28 @@
 {% extends 'household_main/base.html' %}
 
-{% block page_header %}
-  <div class="p-3 mb-4 bg-light border rounded-3">
-    <div class="container-fluid py-4">
-      <h1 class="display-3">Track household things</h1>
-      
-      <p class="lead">Automate your house labor</p>
+  {% block page_header %}
 
-      <a class="btn btn-primary btn-lg mt-1"
-          href="{% url 'accounts:register' %}">Register &raquo;</a>
+    {% if user.is_authenticated %}
+      <div class="p-3 mb-4 bg-light border rounded-3">
+        <div class="container-fluid py-4">
+          <h1 class="display-3">FUCK YOU</h1>
+
+          <p class="lead">and the horse you rode in on</p>
+
+        </div>
     </div>
-  </div>
-{% endblock page_header %}
+
+    {% else %}
+
+    <div class="p-3 mb-4 bg-light border rounded-3">
+      <div class="container-fluid py-4">
+        <h1 class="display-3">Track household things</h1>
+      
+        <p class="lead">Automate your house labor</p>
+
+        <a class="btn btn-primary btn-lg mt-1"
+            href="{% url 'accounts:register' %}">Register &raquo;</a>
+      </div>
+    </div>
+  {% endif %}
+  {% endblock page_header %}
