--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -5,9 +5,9 @@
     {% if user.is_authenticated %}
       <div class="p-3 mb-4 bg-light border rounded-3">
         <div class="container-fluid py-4">
-          <h1 class="display-3">FUCK YOU</h1>
+          <h1 class="display-3">Household</h1>
 
-          <p class="lead">and the horse you rode in on</p>
+          <p class="lead">Track and gamify household labor.</p>
 
         </div>
     </div>
