--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -28,17 +28,17 @@
             <a class="nav-link" href="{% url 'household_main:notes' %}">
               Notes</a></li>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'chores:chores' %}">
               Chores</a></li>
+
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'book_club:books' %}">
+              Books</a></li>
         </ul> <!-- End of links on left side of navbar -->
 
         <!-- Account-related links -->
