Work started on allowing users to add books

--- a/book_club/templates/book_club/new_book.html
+++ b/book_club/templates/book_club/new_book.html
@@ -1,14 +1,13 @@
 {% extends "household_main/base.html" %}
 
 {% block content %}
-
   <p><a href="{% url 'book_club:book' book.id %}">{{ book }}</a></p>
 
   <p>Add a new entry:</p>
-  <form action="{% url 'book_club:new_chore_entry' book.id %}" method='post'>
+  <form action="{% url 'book_club:new_book' book.id %}" method='post'>
     {% csrf_token %}
     {{ form.as_div }}
-    <button name='submit'>Add book read-through</button>
+    <button name='submit'>Add book</button>
   </form>
 
 {% endblock content %}
