--- a/chores/templates/chores/chores.html
+++ b/chores/templates/chores/chores.html
@@ -13,9 +13,15 @@
           {{ chore.text }}</a>
           <div class="card-body">{{ chore.wage|linebreaks }}</div>
       </li>
+
     {% empty %}
       <li class="list-group-item border-0">No chores have been added yet.</li>
     {% endfor %}
+
+    <li class="list-group-item border-0">
+      <a class="nav-link" href="{% url 'chores:payout' %}">
+          Payout</a></li>
   </ul>
+
 
 {% endblock content %}
