Added Chore Categories
 - Added Chore Categories model field
 - Added chore categories views entry
 - Created chores_by_category html template
 - Updated Index page with Books Read coming soon text
 - rerouted Chores button in base.html to chores/chores_by_category.html page

New todo
 - Add new ways to filter chores

--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -11,6 +11,9 @@
           <p><strong>You’ve earned since last payout:</strong> ${{ wage_earned|default:"0.00"|floatformat:2 }}</p>
           <p><strong>Total earned (lifetime):</strong> ${{ lifetime_earned|default:"0.00"|floatformat:2 }}</p>
           <hr>
+
+          <h3> Books Read</h3>
+          <p>Coming Soon</p>
       </div>
     </div>
   {% else %}
