--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -27,12 +27,15 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'household_main:notes' %}">
               Notes</a></li>
+        </ul>
+      </div>
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'chores:chores' %}">
-              Chores</a></li>
+             <a href="{% url 'chores:chores_by_category' %}">Chores</a></li>
+        </ul>
+      </div>
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -56,7 +59,6 @@
               <a class="nav-link" href="{% url 'accounts:login' %}">
                   Log in</a></li>
           {% endif %}
-
         </ul> <!-- End of account-related links -->
 
         {% if user.is_authenticated %}
@@ -69,7 +71,7 @@
 
       </div> <!-- Closes collapsible parts of navbar -->
 
-    </div> <!-- Closes navbar's container -->
+    </div> <!-- Closes navbar container -->
   </nav> <!-- End of navbar -->
 
   <main class="container">
