--- a/book_club/templates/book_club/new_book_entry.html
+++ b/book_club/templates/book_club/new_book_entry.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-  <p><a href="{% url 'books:book' book.id %}">{{ book }}</a></p>
+  <p><a href="{% url 'book_club:book' book.id %}">{{ book }}</a></p>
 
   <p>Add a new entry:</p>
-  <form action="{% url 'books:new_book_entry' book.id %}" method='post'>
+  <form action="{% url 'book_club:new_book_entry' book.id %}" method='post'>
     {% csrf_token %}
     {{ form.as_div }}
     <button name='submit'>Add book entry</button>
