--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -33,7 +33,8 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-             <a href="{% url 'chores:chores_by_category' %}">Chores</a></li>
+             <a class="nav-link" href="{% url 'chores:chores_by_category' %}">
+              Chores</a></li>
         </ul>
       </div>
 
