--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -1,5 +1,6 @@
 {% extends 'household_main/base.html' %}
 
+{% load humanize %}
 {% load debug_tags %}
 {% block page_header %}
   {% if user.is_authenticated %}
@@ -25,6 +26,28 @@
         <p><strong>Total Words Read:</strong> {{ total_words_read|default:"0" }}</p>
       </div>
     </div>
+            <h3>Books Read Leaderboard</h3>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">User</th>
+      <th scope="col">Words Read</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for entry in leaderboard %}
+      <tr>
+        <td>{{ entry.user.username }}</td>
+        <td>{{ entry.wordsLifetime|intcomma }}</td>
+      </tr>
+    {% empty %}
+      <tr>
+        <td colspan="2">No entries yet.</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
   {% else %}
 
     <div class="p-3 mb-4 bg-light border rounded-3">
