--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'book_club:books' %}">
+            <a class="nav-link" href="{% url 'book_club:books_by_category' %}">
               Books</a></li>
         </ul> <!-- End of links on left side of navbar -->
 
