--- a/household_main/templates/household_main/base.html
+++ b/household_main/templates/household_main/base.html
@@ -59,6 +59,9 @@
         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
 
           {% if user.is_authenticated %}
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'accounts:user_profile' username=request.user.username %}">
+                      View My Profile</a></li>
             <li class="nav-item">
               <span class="navbar-text me-2">Hello, {{ user.username }}.
                 </span></li>
